--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+Django~=5.2.8
 djangorestframework==3.15.2
 psycopg2-binary
 django-cors-headers==4.3.0
 Pillow
 djangorestframework-simplejwt==5.5.1
-python-dotenv
+python-dotenv~=1.2.1
